# SuperTux-Analysis

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
src/: ivdv.py  main.py  misc.py  outlier_detection.py  util.py
