[project]
name = "supertux-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    'pyqt5>=5.15.11 ; platform_system != "Windows"',
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "tqdm>=4.67.1",
]
